--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "start": "node index",
-    "dev": "nodemon index"
+    "start": "cross-env NODE_ENV=production node index",
+    "dev": "cross-env NODE_ENV=development nodemon index"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "nodemon": "^3.1.1",
     "prettier": "^3.3.2"
   },
   "dependencies": {
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
