--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node index",
-    "dev": "cross-env NODE_ENV=development nodemon index"
+    "start": "node index",
+    "dev": "nodemon index"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "cross-env": "^7.0.3",
     "nodemon": "^3.1.1",
     "prettier": "^3.3.2"
   },
