--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prettier": "^3.3.2"
   },
   "dependencies": {
+    "axios": "^1.7.4",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
